--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,44 @@
-version: '3.3'
+version: "3.3"
 services:
-  db:
+  ms-order-delivery:
+    container_name: ms-order-delivery
+    image: "node:latest"
+    networks:
+      - ms-order-delivery-backend
+    build: .
+    ports:
+      - "8000:8000"
+    environment:
+      - TZ=America/Santiago
+      - PORT=8000
+  mysql:
     image: mysql:5.7
+    networks:
+      - ms-order-delivery-backend
     restart: always
     environment:
-      MYSQL_DATABASE: 'db'
+      MYSQL_DATABASE: "db"
       # So you don't have to use root, but you can if you like
-      MYSQL_USER: 'user'
+      MYSQL_USER: "user"
       # You can use whatever password you like
-      MYSQL_PASSWORD: 'password'
+      MYSQL_PASSWORD: "password"
       # Password for root access
-      MYSQL_ROOT_PASSWORD: 'password'
+      MYSQL_ROOT_PASSWORD: "password"
     ports:
       # <Port exposed> : < MySQL Port running inside container>
-      - '3306:3306'
+      - "3306:3306"
     expose:
       # Opens port 3306 on the container
-      - '3306'
+      - "3306"
       # Where our data will be persisted
     volumes:
       - my-db:/var/lib/mysql
 # Names our volume
 volumes:
   my-db:
+networks:
+  ms-order-delivery-backend:
+    ipam:
+      driver: default
+      config:
+        - subnet: "172.16.200.0/24"
